--- a/src/main/asciidoc/index.adoc
+++ b/src/main/asciidoc/index.adoc
@@ -14,3 +14,8 @@ include::{modulith-docs}/module-framework.adoc[]
 
 plantuml::{modulith-docs}/module-process_design.puml[format="svg"]
 include::{modulith-docs}/module-process_design.adoc[]
+
+== Process runtime
+
+plantuml::{modulith-docs}/module-process_runtime.puml[format="svg"]
+include::{modulith-docs}/module-process_runtime.adoc[]
